<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/relativeLayout"
            android:background="@color/main_color"
            android:layout_height="@dimen/_40sdp">
            <ImageButton
                android:layout_width="@dimen/_40sdp"
                android:src="@drawable/ic_baseline_arrow_back_1"
                android:background="@color/main_color"
                android:id="@+id/Exit"
                android:layout_height="match_parent">
            </ImageButton>
            <AutoCompleteTextView
                android:textColorHint="#B0000000"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/Exit"
                android:layout_toLeftOf="@id/search"
                android:background="@drawable/bo_goc"
                android:maxLines="1"
                android:lines="1"
                android:completionThreshold="1"
                android:id="@id/textTimKiem"
                android:inputType="text"
                android:textColor="#000000"
                android:paddingLeft="@dimen/_10sdp"
                android:gravity="center|left"
                android:hint="@string/timKiemODay"
                android:layout_centerInParent="true"
                android:layout_height="@dimen/_30sdp">

            </AutoCompleteTextView>
          <ImageButton
              android:layout_width="@dimen/_40sdp"
              android:id="@+id/search"
              android:layout_alignParentRight="true"
              android:src="@drawable/ic_baseline_search_24"
              android:background="@color/main_color"
              android:layout_height="match_parent">

          </ImageButton>
        </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textTimKiem"
        android:textColor="#000000"
        android:text="@string/timKiemPhoBien"
        android:textSize="@dimen/_14sdp"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">

    </TextView>
    <Button
        android:layout_width="@dimen/_120sdp"
        android:text="@string/miSpaghetti"
        android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:id="@+id/btnMiY"
        android:textColor="#000000"
        android:layout_below="@id/textTimKiem"
        android:background="@drawable/bo_goc"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_height="@dimen/_25sdp">
    </Button>
    <Button
        android:layout_width="@dimen/_120sdp"
        android:text="@string/supCoZiDo"
        android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:layout_toRightOf="@id/btnMiY"
        android:textColor="#000000"
        android:layout_below="@id/textTimKiem"
        android:background="@drawable/bo_goc"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:id="@+id/btnSupCozido"
        android:layout_height="@dimen/_25sdp">
    </Button>
    <Button
        android:layout_width="@dimen/_120sdp"
        android:text="@string/banhRosti"
        android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:id="@+id/btnbanhRosti"
        android:layout_below="@id/btnMiY"
        android:background="@drawable/bo_goc"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_height="@dimen/_25sdp">
    </Button>
    <Button
        android:layout_width="@dimen/_130sdp"
        android:text="@string/banhBuscheratti"
        android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:id="@+id/btnBruschestta"
        android:layout_below="@id/btnMiY"
        android:layout_toRightOf="@+id/btnbanhRosti"
        android:background="@drawable/bo_goc"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000000"
        android:layout_height="@dimen/_25sdp">
    </Button>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/textLichSu"
            android:text="@string/lichSuTimKiem"
            android:textSize="@dimen/_14sdp"
            android:textColor="#000000"
            android:layout_below="@+id/btnBruschestta"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content">

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="@dimen/_270sdp"

            android:id="@+id/recycleviewMonSearch"
            android:layout_centerInParent="true"
            android:layout_below="@id/textLichSu"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
</layout>