<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/taskbar"
            android:orientation="horizontal"
            android:layout_height="@dimen/_30sdp">
        <ImageButton
            android:layout_width="@dimen/_40sdp"
            android:src="@drawable/left_arrow"
            android:background="#00FFFFFF"
            android:id="@+id/logout"
            android:layout_gravity="center"
            android:layout_height="@dimen/_40sdp">
        </ImageButton>
            <TextView
                android:layout_width="match_parent"
                android:paddingLeft="-15dp"
                android:text="@string/thongTinMonAn"
                android:textColor="#000000"
                android:gravity="center"
                android:background="#00FFFFFF"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_height="match_parent">

            </TextView>
    </LinearLayout>

        <ImageView
            android:id="@+id/imageMonAn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_below="@id/taskbar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="0dp"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:layout_marginRight="0dp">

        </ImageView>

        <TextView
            android:layout_width="@dimen/_110sdp"
            android:id="@+id/titleTenMon"
            android:text="@string/tenMon"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="#000000"
            android:layout_below="@+id/imageMonAn"
            android:layout_height="@dimen/_35sdp">
        </TextView>

        <TextView
            android:id="@+id/tenMonAn"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/imageMonAn"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@id/titleTenMon"
            android:text="@string/supCoZiDo"
            android:textColor="#000000"
            android:textSize="@dimen/_14sdp"></TextView>

        <TextView
            android:id="@+id/mieuTaChiTiet"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_below="@id/titleTenMon"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/mieuTaChiTiet"
            android:textColor="#000000"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:layout_width="@dimen/_170sdp"
            android:textSize="@dimen/_14sdp"
            android:id="@+id/mieuTaMonAn"
            android:layout_toRightOf="@id/mieuTaChiTiet"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@id/tenMonAn"
            android:text=""
            android:textColor="#000000"
            android:layout_height="@dimen/_140sdp">
        </TextView>
        <TextView
            android:layout_width="@dimen/_110sdp"
            android:id="@+id/pricetitle"
            android:layout_below="@id/mieuTaChiTiet"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/gia"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="#000000"
            android:textSize="@dimen/_14sdp"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:layout_toRightOf="@id/pricetitle"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@id/mieuTaMonAn"
            android:text="abc"
            android:id="@+id/price"
            android:textColor="@color/main_color"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:textColor="@color/main_color"
            android:text="VNĐ"
            android:paddingLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:layout_toRightOf="@id/price"
            android:layout_below="@id/mieuTaMonAn"
            android:layout_height="wrap_content">
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentBottom="true">
            <Button
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:id="@+id/btnYeuThich"
                android:drawableTop="@drawable/heart"
                android:gravity="center"
                android:background="#00FFFFFF"
                android:textSize="@dimen/_12sdp"
                android:text="@string/yeuThich"
                android:textColor="@color/main_color"
                android:textAllCaps="false"
                android:layout_height="match_parent">
            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_toLeftOf="@id/btnYeuThich"
                android:background="@color/main_color"
                android:gravity="center"
                android:id="@+id/themHang"
                android:text="@string/themVaoGio"
                android:textColor="#FFFFFF"
                android:clickable="false"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:layout_height="match_parent">

            </Button>

        </RelativeLayout>

    </RelativeLayout>
    </RelativeLayout>
</layout>